# trainmon-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  hash.rs  mod.rs  start.ps1  this_is_just_a_python_dummy_for_reference.py
migrations/: 20231117120136_Initial_setup.sql
src/: main.rs
src/adapters/: askama.rs  database_adapter.rs  database_retriever.rs  file_provider.rs  fit_file_processor.rs  fit_parser_adapter.rs  mod.rs  oura_adapter.rs  postgres_adapter.rs  tp_import_adapter.rs  training_effect.rs  web_adapter.rs  workout_handler.rs
src/adapters/web/: mod.rs  workout_aggregate.rs
src/application/: mod.rs
src/application/analyzer/: heart_rate_analyzer.rs  mod.rs  power_analyzer.rs  workout_analyzer.rs
src/application/heart_rate/: hr_service.rs  mod.rs
src/application/helper/: data_frame.rs  mod.rs  uuid.rs
src/application/math/: fit_exponential.rs  mod.rs
src/application/power/: pwr_service.rs
src/application/processing/: process.rs
src/application/vlamax/: mod.rs  vlamax_estimator.rs
src/application/workout/: mod.rs  workout_service.rs
src/domain/core/: data_bytes.rs  mod.rs  user_model.rs
src/domain/model/: mod.rs
src/domain/model/http/: file_provider_option.rs  http_analysis_request.rs  http_analysis_result.rs  http_analysis_save_request.rs  mod.rs
src/domain/model/partial/: heart_rate_data.rs  mod.rs  partial_result.rs  power_data.rs  workout_summary.rs
src/domain/model/results/: analysis_result.rs  mod.rs  (+3 more)
src/model/: enums.rs  heart_rate_data.rs  mod.rs  traits.rs  workout_data.rs
src/ports/: analyzer.rs  data_access_port.rs  data_management_port.rs  database.rs  database_retrieval.rs  fit_file_parser.rs  fit_file_processing_command.rs  mod.rs  tp_import.rs  training_effect.rs  vlamax.rs
src/processing/: fit_parsing.rs  heart_rate.rs  mod.rs  process.rs  workout.rs
src/processing/analyzers/: HeartRateAnalyzer.rs  WorkoutAnalyzer.rs  heart_rate_analyzer.rs  mod.rs  workout_analyzer.rs
src/web_models/: overview_page.rs  workout_aggregate.rs
templates/: import.html  index.html  individual_workouts.html  oura_upload.html  styles.css  tp_upload.html  weekly_summary.html  workout.html
templates/pages/: import.html  overview.html
