[package]
name = "simple-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fitparser = "0.6.1"
futures = "0.3.29"
futures-util = "0.3.29"
num_cpus = "1.16.0"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
warp = "0.3.6"

[dev-dependencies]
pretty_env_logger = "0.5.0"
