[package]
name = "simple-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
chrono = "0.4.31"
fitparser = "0.6.1"
futures = "0.3.29"
futures-util = "0.3.29"
nalgebra = "0.32.3"
num_cpus = "1.16.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = "1.0.192"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
varpro = "0.7.1"
warp = "0.3.6"

[dev-dependencies]
pretty_env_logger = "0.5.0"
