[package]
name = "simple-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
fitparser = "0.6.1"
futures = "0.3.29"
futures-util = "0.3.29"
nalgebra = "0.32.3"
num_cpus = "1.16.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
sha2 = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
varpro = "0.7.1"
axum = { version= "0.7.4", features = ["multipart", "macros"]}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.2", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls", "bigdecimal"] }
uuid = { version = "1.4", features = ["v4","v5", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.74"
anyhow = "1.0.75"
base64 = "0.13.0"
askama = "0.12.1"
serde_html_form = "0.2.3"
csv-async = "1.2.6"
tokio-util = "0.7.10"
polars = {version= "0.36.2", features=["lazy", "rolling_window", "dtype-date","dtype-datetime"] }
linregress = "0.5.3"
sha1 = "0.10.6"
either = "1.9.0"


[dev-dependencies]
pretty_env_logger = "0.5.0"
